<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image_top_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/top_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singup"
        android:textColor="@color/pink"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_top_background" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:drawableStart="@drawable/name"
        android:drawablePadding="16dp"
        android:hint="@string/name"
        android:textColor="@color/edit_text_login"
        android:textColorHint="@color/edit_text_login"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login" />


    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/edit_text_login"
        android:textColorHint="@color/edit_text_login"
        android:textSize="18sp"
        android:drawableStart="@drawable/email"
        android:drawablePadding="16dp"
        android:layout_margin="32dp"
        />



    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/edit_text_login"
        android:textColorHint="@color/edit_text_login"
        android:textSize="18sp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="16dp"
        android:layout_margin="32dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_signup"
        android:layout_width="0dp"
        style="@android:style/Widget.Button"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/pink"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/singup"
        />

    <TextView
        android:id="@+id/textView_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_your_password_recovery"
        app:layout_constraintTop_toBottomOf="@+id/button_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="14dp"
        android:textColor="@color/pink"
        android:textStyle="bold"

        />

</androidx.constraintlayout.widget.ConstraintLayout>